# universal-rag

./: .env.example  FASTAPI_BOILERPLATE.md  README.md  pyproject.toml
src/: app.py  containers.py  main.py  routes.py
src/config/: app_config.py  db_config.py
src/controllers/: health.py  item.py
src/db/: db_manager.py
src/middlewares/: date_format_middleware.py  external_api_middleware.py  middlewares.py  request_logger.py
src/models/request/: item.py
src/models/response/: item.py
src/repositories/: base_repository.py  item_repository.py
src/services/: health.py  item.py
src/utils/: exceptions.py  global_exception_handler.py  helper.py  logger.py  request_context.py
