[tool.poetry]
name = "universal-rag"
version = "0.1.0"
description = "Universal RAG application"
authors = ["Archit Gupta <argupta@ex2india.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.136.0"
uvicorn = {version = "0.30.3", extras = ["standard"]}
pydantic = "2.10.5"
pydantic-settings = "^2.0.0"
motor = "3.6.0"
pymongo = "4.9.0"
dependency-injector = "4.46.0"
python-dotenv = "^1.0.0"
psutil = "^6.0.0"
brotli = "^1.0.9"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "0.23.8"
black = "24.4.2"
pylint = "3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
